@@ -2,6 +2,9 @@ openmediavault (6.0.11-1) unstable; urgency=low
 
   * Various improvements.
   * Fix issue in SMB recycle cron job.
+  * Disable the 'Access control list' button on the shared folder
+    page if the selected entry is located on a non-POSIX compliant
+    file system.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 05 Feb 2022 09:00:47 +0100
 
